<?xml version="1.0" encoding="utf-8"?>

<!--
   Copyright 2010 Currency Rates Open Source project

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License. 
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Currency Rates</string>

    <string name="widget_name">Currency Rates</string>
    <string name="widget_error">Widget error!</string>
    <string name="widget_loading">Loading...</string>
    <string name="widget_network_error">Network is not available!</string>
    <string name="widget_download_error">Data download failed!</string>
    <string name="widget_unknown">\?\?\?</string>

    <string name="date_time_format">yyyyMMddHHmmss</string>
    <string name="time_format_24">" - HH:mm"</string>
    <string name="time_format_12">" h:mma"</string>

    <string name="notification_comment">Select to open an overview.</string>
    <string name="notification_ticker"><xliff:g id="currency">%s</xliff:g> changed</string>
    <string name="notification_ticker_message"><xliff:g id="currency">%s</xliff:g> <xliff:g id="rate">%s</xliff:g> (<xliff:g id="rate_diff">%s</xliff:g>)</string>

    <string name="dialog_activity_title">Action list</string>
    <string name="dialog_browser">Browser</string>
    <string name="dialog_overview">Overview</string>
    <string name="dialog_share">Share</string>
    <string name="dialog_update">Update</string>
    <string name="dialog_settings">Settings</string>
    <string name="dialog_about">About</string>
    <string name="dialog_menu_update">Update widget</string>
    <string name="dialog_share_title">Share via...</string>
    <string-array name="select_share">
        <item>SMS</item>
        <item>E-mail</item>
    </string-array>
    <string-array name="select_share_values"> <!-- DO NOT TRASNSLATE -->
        <item>sms</item>
        <item>email</item>
    </string-array>
    <string name="dialog_share_sms_message"><xliff:g id="currency">%s</xliff:g> <xliff:g id="rate">%s</xliff:g> (<xliff:g id="rate_diff">%s</xliff:g>); <xliff:g id="date">%s</xliff:g>; <xliff:g id="bank">%s</xliff:g></string>
    <string name="dialog_share_email_subject"><xliff:g id="currency">%s</xliff:g> exchange rate has changed</string>
    <string name="dialog_share_email_message">Bank: <xliff:g id="bank">%s</xliff:g>\nCurrency: <xliff:g id="currency">%s</xliff:g>\nRate: <xliff:g id="rate">%s</xliff:g> (<xliff:g id="rate_diff">%s</xliff:g>)\nDate: <xliff:g id="date">%s</xliff:g></string>

    <string name="about_activity_title">About Currency Rates</string>
    <string name="about_text">This widget helps you to keep track on exchange rates provided by your bank. It lets you know when the exchange rate has changed and shows you additional informations of the change.\n\nIf you are missing your favorite bank in the list, let me know and I will try to add it. If you feel like a Java programmer, you can try to add it by your self. All the source codes are available at the project page:\n\nhttp://code.google.com/p/currencyrates</string>
    <string name="about_close">Close</string>

    <string name="overview_activity_title">Overview</string>
    <string name="overview_bank">Bank:</string>
    <string name="overview_currency">Currency:</string>
    <string name="overview_rate">Rate:</string>
    <string name="overview_rate_prev">Previous rate:</string>
    <string name="overview_rate_diff">Rate difference:</string>
    <string name="overview_rate_time">Rate time:</string>
    <string name="overview_last_update">Last update:</string>
    <string name="overview_last_notif">Last notification:</string>
    <string name="overview_last_notif_rate">Last notified rate:</string>
    <string name="overview_last_notif_diff">Since last notification:</string>
    <string name="overview_last_widget_update">Last widget update:</string>
    <string name="overview_refresh">Refresh</string>
    <string name="overview_close">Close</string>

    <string name="preferences_file_prefix">CurrencyRates</string>

    <string name="preferences_activity_title">Settings</string>

    <string name="preferences_bank_category_title">Bank</string>
    <string name="preferences_bank_title">Bank</string>
    <string name="preferences_bank_summary">List of all banks</string>
    <string name="preferences_bank_default_value">TB</string> <!-- DO NOT TRASNSLATE -->
    <string name="preferences_bank_dialog_title">Banks</string>
    <string-array name="select_bank">
        <item>Raiffeisen Bank (CZ)</item>
        <item>UniCredit Bank (CZ)</item>
        <item>Testing Bank</item>
    </string-array>
    <string-array name="select_bank_values"> <!-- DO NOT TRASNSLATE -->
        <item>RB_CZ</item>
        <item>UCB_CZ</item>
        <item>TB</item>
    </string-array>
    <string name="preferences_bank_alias_title">Bank alias</string>
    <string name="preferences_bank_alias_summary">Bank alias which is visible in the widget</string>
    <string name="preferences_bank_alias_dialog_title">Bank alias</string>

    <string name="preferences_currency_category_title">Currency</string>
    <string name="preferences_currency_title">Currency</string>
    <string name="preferences_currency_summary">List of all currencies</string>
    <string name="preferences_currency_dialog_title">Currency list</string>

    <string name="preferences_exchange_title">Exchange type</string>
    <string name="preferences_exchange_summary">Select foreign exchange type</string>
    <string name="preferences_exchange_default_value">DEVIZA</string> <!-- DO NOT TRASNSLATE -->
    <string name="preferences_exchange_dialog_title">Exchange type</string>
    <string-array name="select_exchange">
        <item>Foreign exchange</item>
        <item>Foreign exchange - cache</item>
    </string-array>
    <string-array name="select_exchange_values"> <!-- DO NOT TRASNSLATE -->
        <item>DEVIZA</item>
        <item>VALUTA</item>
    </string-array>
    <string name="preferences_direction_title">Exchange direction</string>
    <string name="preferences_direction_summary">Select purchase or sale</string>
    <string name="preferences_direction_default_value">PURCHASE</string> <!-- DO NOT TRASNSLATE -->
    <string name="preferences_direction_dialog_title">Exchange direction</string>
    <string-array name="select_direction">
        <item>Purchase</item>
        <item>Sale</item>
    </string-array>
    <string-array name="select_direction_values"> <!-- DO NOT TRASNSLATE -->
        <item>PURCHASE</item>
        <item>SALE</item>
    </string-array>

    <string name="preferences_format_category_title">Date &amp; time format</string>
    <string name="preferences_date_format_title">Date format</string>
    <string name="preferences_date_format_summary">Select a date format</string>
    <string name="preferences_date_format_default_value">dd.MM.yyyy</string>
    <string name="preferences_date_format_dialog_title">Date format</string>
    <string-array name="select_date_format">
        <item>dd.MM.yyyy</item>
        <item>dd-MM-yyyy</item>
        <item>MM-dd-yyyy</item>
        <item>yyyy-MM-dd</item>
    </string-array>
    <string name="preferences_time_format_title">Use 24-hour format</string>
    <string name="preferences_time_format_summary">Use format 13:00 instead of 1:00pm</string>
    <string name="preferences_time_format_default_value">true</string>

    <string name="preferences_timing_category_title">Timing</string>
    <string name="preferences_period_title">Update period</string>
    <string name="preferences_period_summary">How often to read a new data</string>
    <string name="preferences_period_default_value">60</string>
    <string name="preferences_period_dialog_title">Update period</string>
    <string-array name="select_period">
        <item>10 minute</item>
        <item>20 minute</item>
        <item>30 minute</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="select_period_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>360</item>
    </string-array>
    <string name="preferences_checkfrom_title">Start time</string>
    <string name="preferences_checkfrom_summary">When to start reading new data</string>
    <string name="preferences_checkfrom_hour_default">8</string>
    <string name="preferences_checkfrom_minute_default">30</string>
    <string name="preferences_checkto_title">Stop time</string>
    <string name="preferences_checkto_summary">When to stop reading new data</string>
    <string name="preferences_checkto_hour_default">17</string>
    <string name="preferences_checkto_minute_default">00</string>
    <string name="preferences_checkday_title">Days</string>
    <string name="preferences_checkday_summary">Days of the week when to read new data</string>
    <string name="preferences_checkday_dialog_title">Check on day</string>
    <string-array name="select_checkday">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="preferences_checkday_default_value">1:1:1:1:1:0:0</string>

    <string name="preferences_notification_category_title">Notification</string>
    <string name="preferences_notification_title">Notification</string>
    <string name="preferences_notification_summary">Show notification when the rate has been changed</string>
    <string name="preferences_notification_default_value">true</string>

    <string name="preferences_tolerance_title">Tolerance</string>
    <string name="preferences_tolerance_summary">Increment since last notification which has to be meet to show next one</string>
    <string name="preferences_tolerance_dialog_title">Tolerance</string>
    <string name="preferences_tolerance_default_value">0</string>

    <string name="preferences_sound_title">Sound</string>
    <string name="preferences_sound_summary">Play a sound when the rate has been changed</string>
    <string name="preferences_sound_default_value">false</string>

    <string name="preferences_ringtone_pos_title">Positive ringtone</string>
    <string name="preferences_ringtone_pos_summary">Play a sound on positive rate change</string>

    <string name="preferences_ringtone_neg_title">Negative ringtone</string>
    <string name="preferences_ringtone_neg_summary">Play a sound on negative rate change</string>

    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preferences_vibrate_summary">Vibrate when the rate has been changed</string>
    <string name="preferences_vibrate_default_value">false</string>

    <string name="preferences_led_title">Led</string>
    <string name="preferences_led_summary">Blink with the led diode when the rate has been changed</string>
    <string name="preferences_led_default_value">false</string>

</resources>